--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
 
         async function getData() {
-            const api_url = 'https://marine-api.open-meteo.com/v1/marine?latitude=-6.18&longitude=106.82&hourly=wave_height,wave_direction,wave_period&timeformat=unixtime&timezone=auto';
+            const api_url = 'https://marine-api.open-meteo.com/v1/marine?latitude=-6.18&longitude=106.82&hourly=wave_height,wave_direction,wave_period&timezone=auto';
             const response = await fetch(api_url);
             const data = await response.json();
             const x = {
