--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,21 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Grafik Gelombang Jakarta 1 Minggu ke Depan</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.1.2"></script>
 </head>
 
 <body>
     <h1>Grafik Gelombang Jakarta 1 Minggu ke Depan</h1>
 
-    <canvas id="myChart" width="400" height="125"></canvas>
+    <canvas id="waveHeightChart" width="400" height="150"></canvas>
+    <canvas id="waveDirectionChart" width="400" height="150"></canvas>
 
     <script>
         window.addEventListener('load', setup);
 
         async function setup() {
-            const ctx = document.getElementById('myChart').getContext('2d');
+            const waveHeightCtx = document.getElementById('waveHeightChart').getContext('2d');
+            const waveDirectionCtx = document.getElementById('waveDirectionChart').getContext('2d');
             const dataTable = await getData();
-            const myChart = new Chart(ctx, {
+
+            // Wave height chart
+            const waveHeightChart = new Chart(waveHeightCtx, {
                 type: 'line',
                 data: {
                     labels: dataTable.dates,
@@ -31,7 +34,17 @@
                         borderColor: 'rgba(255, 99, 132, 1)',
                         backgroundColor: 'rgba(255, 99, 132, 0.5)',
                         borderWidth: 1
-                    }, {
+                    }]
+                },
+                options: {}
+            });
+
+            // Wave direction chart
+            const waveDirectionChart = new Chart(waveDirectionCtx, {
+                type: 'line',
+                data: {
+                    labels: dataTable.dates,
+                    datasets: [{
                         label: 'Arah Gelombang dalam Derajat',
                         data: dataTable.direction,
                         fill: false,
@@ -49,15 +62,15 @@
             const response = await fetch(api_url);
             const data = await response.json();
             const x = {
-                "time": data.hourly.time,
-                "wave_height": data.hourly.wave_height,
-                "wave_direction": data.hourly.wave_direction,
-            }
+                time: data.hourly.time,
+                wave_height: data.hourly.wave_height,
+                wave_direction: data.hourly.wave_direction,
+            };
 
             const dates = x.time;
             const height = x.wave_height;
             const direction = x.wave_direction;
-            dates.forEach(e => console.log(e))
+            dates.forEach((e) => console.log(e));
             return {
                 dates,
                 height,
