--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Grafik Gelombang Jakarta 1 Minggu ke Depan</title>
+    <title>Grafik Gelombang 1 Minggu ke Depan</title>
 </head>
 
 <body style="max-width: 800px; margin: auto; padding: 30px;">
