--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             title.style.display = "none";
             e.preventDefault();
 
-            var apiKey = "8ca78e034a25bdeac5ce35d208c2941c";
+            var apiKey = "jksajklsd";
             fetch("https://api.openweathermap.org/data/2.5/weather?q=" + address.value + "&units=metric&appid=" + apiKey)
                 .then((response) => {
                     if (!response.ok) {
